# spotter-test-project

./: Agents.md  CLAUDE.md  ELD-Trip-Planner-PRD.md  skills-lock.json
.codex/: config.toml
docs/superpowers/plans/: 2026-06-13-frontend-phase-a.md  2026-06-13-frontend-phase-b.md  2026-06-13-hos-engine.md  2026-06-13-route-api.md
docs/superpowers/specs/: 2026-06-13-frontend-design.md  (+3 more)
spotter-backend/: .env.example  Agents.md  CLAUDE.md  README.md  bts.jsonc  pyproject.toml  render.yaml
spotter-backend/src/app/: main.py  settings.py  urls.py  visits.py
spotter-backend/src/app/api/: interpolate.py  serializers.py  service.py  views.py
spotter-backend/src/app/geocoding/: base.py  factory.py  nominatim.py
spotter-backend/src/app/hos/: __init__.py  constants.py  daysplit.py  engine.py  models.py  statuses.py
spotter-backend/src/app/routing/: base.py  factory.py  openroute.py
spotter-backend/tests/: conftest.py  test_main.py
spotter-backend/tests/api/: test_interpolate.py  test_nominatim.py  test_ors_provider.py  test_routing_factory.py  test_serializers.py  test_service.py  test_trip_plan_view.py
spotter-backend/tests/hos/: test_cycle_cap_regression.py  test_daysplit.py  test_daysplit_invariants.py  test_drive_to_pickup.py  test_engine_integration.py  test_models.py  test_rule1_eleven_hour_driving_limit.py  test_rule2_fourteen_hour_driving_window.py  test_rule3_thirty_minute_rest_break.py  test_rule4_ten_consecutive_hours_off.py  test_rule5_seventy_hour_eight_day_limit.py  test_rule6_fueling_stop_every_1000_miles.py  test_rule7_one_hour_pickup_and_dropoff.py  test_stop_mile_marker.py
spotter-frontend/: .gitignore  README.md  biome.json  bts.jsonc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
spotter-frontend/src/: app-shell.tsx  index.css  main.tsx  router.tsx
(+37 files in other folders)
