[project]
name = "spotter-backend"
version = "0.1.0"
description = "A Python project created with Better Fullstack"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "django>=5.1",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]




[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Collect the PRD-named HOS rule suites (RuleN_*) alongside conventional Test* classes.
python_classes = ["Test*", "Rule*"]
